[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/models/guns/wyh_revolver_ply.glb" type="PackedScene" id=1]
[ext_resource path="res://source/guns/revolver/revolver.gd" type="Script" id=2]
[ext_resource path="res://assets/images/custom/misc/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/sfx/2/shoot_sfx_01.mp3" type="AudioStream" id=4]

[sub_resource type="Shader" id=67]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;

const float PI = 3.1415926;

uniform float viewmodel_fov = 50.0f;

uniform vec4 albedo : hint_color = vec4(1.0f);
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular = 0.5f;
uniform float metallic = 1.0f;
uniform float roughness : hint_range(0,1) = 1.0f;
uniform float point_size : hint_range(0,128);
uniform sampler2D texture_metallic : hint_white;
uniform vec4 metallic_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
uniform sampler2D texture_roughness : hint_white;
uniform vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
//uniform sampler2D texture_emission : hint_black_albedo;
//uniform vec4 emission : hint_color;
//uniform float emission_energy;
uniform sampler2D texture_normal : hint_normal;
uniform float normal_scale : hint_range(-16,16) = 0.5f;
uniform vec3 uv1_scale = vec3(1.0f);
uniform vec3 uv1_offset = vec3(0.0f);
uniform vec3 uv2_scale = vec3(1.0f);
uniform vec3 uv2_offset = vec3(0.0f);

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
	
	/* begin shader magic*/
	float onetanfov = 1.0f / tan(0.5f * (viewmodel_fov * PI / 180.0f));
	float aspect = VIEWPORT_SIZE.x / VIEWPORT_SIZE.y;
	// modify projection matrix
	PROJECTION_MATRIX[1][1] = onetanfov;
	PROJECTION_MATRIX[0][0] = onetanfov / aspect;
	// draws the viewmodel over everything (disable if you want dof near on viewmodel)
	POSITION = PROJECTION_MATRIX * MODELVIEW_MATRIX * vec4(VERTEX.xyz, 1.0);
	POSITION.z = mix(POSITION.z, 0, 0.999);
	/* end shader magic */
}

void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	albedo_tex *= COLOR;
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
	NORMALMAP = texture(texture_normal,base_uv).rgb;
	NORMALMAP_DEPTH = normal_scale;
	//vec3 emission_tex = texture(texture_emission,base_uv).rgb;
	//EMISSION = (emission.rgb+emission_tex)*emission_energy;
}"

[sub_resource type="ShaderMaterial" id=66]
shader = SubResource( 67 )
shader_param/viewmodel_fov = 80.0
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.0
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 0.0
shader_param/metallic_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/roughness_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/normal_scale = 0.5
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShootLight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShootLight:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "charge_shoot"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 0, 1, 1 ), Color( 0.992157, 0, 1, 1 ), Color( 0.992157, 0, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 5, 5 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShootLight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShootLight:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.854902, 1, 1 ), Color( 0, 0.854902, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 2, 2 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShootLight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShootLight:light_energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, -1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
scale = 1.5
scale_curve = SubResource( 14 )

[sub_resource type="SpatialMaterial" id=15]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 0.854902, 1, 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 15 )
size = Vector2( 0.1, 0.1 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.478873, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 5
emission_ring_radius = 0.6
emission_ring_inner_radius = 0.5
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )
radial_accel = -10.0
scale_curve = SubResource( 16 )

[sub_resource type="SpatialMaterial" id=17]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.858824, 0, 1, 1 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 17 )
size = Vector2( 0.1, 0.1 )

[node name="Revolver" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="wyh_revolver" parent="." index="0"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
layers = 3
material/0 = SubResource( 66 )

[node name="OmniLight" type="OmniLight" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.31, 0.26, 0 )
visible = false
layers = 3

[node name="Sprite3D" type="Sprite3D" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, -0.43 )
visible = false
texture = ExtResource( 3 )

[node name="ShootLight" type="OmniLight" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.71 )
visible = false
layers = 3
light_color = Color( 0, 0.854902, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
playback_speed = 20.0
anims/RESET = SubResource( 2 )
anims/charge_shoot = SubResource( 13 )
anims/shoot = SubResource( 1 )

[node name="Particles" type="Particles" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6 )
emitting = false
amount = 5
lifetime = 0.15
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 0.15
one_shot = true

[node name="ChargeParticles" type="Particles" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6 )
emitting = false
lifetime = 0.4
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="ProjectilePosition" type="Position3D" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06, -0.44 )

[node name="BurnoutTimer" type="Timer" parent="." index="9"]
wait_time = 1.5
one_shot = true

[node name="NormalShotSFX" type="AudioStreamPlayer3D" parent="." index="10"]
stream = ExtResource( 4 )
unit_db = 20.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BurnoutTimer" to="." method="_on_BurnoutTimer_timeout"]
